@@ -140,7 +140,11 @@ public class EditPane extends JPanel implements EBComponent
 				// avoid a race condition
 				// see bug #834338
 				if(buffer == getBuffer())
+				{
+					System.err.println("load caret info");
 					loadCaretInfo();
+					System.err.println(buffer.getProperty(Buffer.CARET));
+				}
 			}
 		};
 
@@ -250,6 +254,9 @@ public class EditPane extends JPanel implements EBComponent
 	 */
 	public void saveCaretInfo()
 	{
+		if(!buffer.isLoaded())
+			return;
+
 		buffer.setIntegerProperty(Buffer.CARET,
 			textArea.getCaretPosition());
 
